# netatmo_custom

./: .gitignore  AGENTS.md  CLAUDE.md  import_pyatmo.sh  import_tests.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
custom_components/netatmo/: __init__.py  binary_sensor.py  button.py  camera.py  climate.py  config_flow.py  const.py  cover.py  data_handler.py  entity.py  fan.py  light.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/netatmo/pyatmo/: __init__.py  account.py  auth.py  const.py  event.py  helpers.py  home.py  person.py  room.py  schedule.py  webrtc.py
custom_components/netatmo/pyatmo/modules/: __init__.py  base_class.py  bticino.py  device_types.py  idiamant.py  legrand.py  module.py  netatmo.py  smarther.py  somfy.py  velux.py
custom_components/netatmo/translations/: en.json
scripts/: generate_translations.py  quality_gate.py  test
tests/: __init__.py  common.py  conftest.py  typing.py
tests/components/diagnostics/: __init__.py
tests/components/netatmo/: common.py  conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_camera.py  test_climate.py  test_climate_pilot_wire.py  test_config_flow.py  test_config_flow_multihome.py  test_cover.py  test_data_handler_rate_limiting.py  test_device_trigger.py  test_diagnostics.py  test_fan.py  test_init.py  test_light.py  test_media_source.py  test_select.py  test_sensor.py  test_sensor_energy.py  test_switch.py
tests/components/netatmo/__snapshots__/: test_binary_sensor.ambr  test_button.ambr  test_camera.ambr  test_climate.ambr  test_cover.ambr  test_fan.ambr  test_init.ambr  test_light.ambr  test_select.ambr  test_sensor.ambr  test_switch.ambr
tests/components/netatmo/fixtures/: getmeasure.json  homesdata_multihome.json  homesdata_pilot_wire.json  homestatus_aabbccddee000001.json  homestatus_aabbccddee000002.json  homestatus_aabbccddee000003.json
tests/components/netatmo/snapshots/: test_camera.ambr  test_climate.ambr  test_cover.ambr  test_fan.ambr  test_init.ambr  test_sensor.ambr  test_switch.ambr
tests/test_util/: aiohttp.py
