[project]
name = "netatmo-custom"
version = "2025.12.07"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

# ---------------------------------------------------------------------------
# Ruff — matches Home Assistant core rules for upstream mergeability
# ---------------------------------------------------------------------------
[tool.ruff]
required-version = ">=0.15.1"

[tool.ruff.lint]
select = [
    "A001",   # variable shadowing a Python builtin
    "ASYNC",  # flake8-async
    "B002", "B005", "B007", "B009", "B014", "B015", "B017", "B018",
    "B023", "B024", "B025", "B026", "B032", "B035", "B904", "B905",
    "BLE",
    "C",      # complexity
    "COM818",
    "D",      # docstrings
    "DTZ003", "DTZ004",
    "E",      # pycodestyle
    "F",      # pyflakes
    "F541",
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "INP",    # flake8-no-pep420
    "ISC",    # flake8-implicit-str-concat
    "ICN001",
    "LOG",    # flake8-logging
    "N804", "N805", "N815",
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-pathlib
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF005", "RUF006", "RUF007", "RUF008", "RUF010", "RUF013",
    "RUF016", "RUF017", "RUF018", "RUF019", "RUF020", "RUF021",
    "RUF022", "RUF023", "RUF024", "RUF026", "RUF030", "RUF032",
    "RUF033", "RUF034", "RUF059", "RUF100", "RUF101", "RUF200",
    "S102", "S103", "S108", "S306", "S307",
    "S313", "S314", "S315", "S316", "S317", "S318", "S319",
    "S601", "S602", "S604", "S608", "S609",
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T100",
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # tidy imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

ignore = [
    "D202", "D203", "D213", "D406", "D407", "D417",
    "E501",
    "PLC1901",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLW0108", "PLW1641", "PLW2901",
    "PT011", "PT018",
    "RUF001", "RUF002", "RUF003", "RUF015",
    "SIM102", "SIM103", "SIM108", "SIM115",
    "TC001", "TC002", "TC003", "TC006",
    "TRY003", "TRY400",
    "UP046", "UP047", "UP049",
    "W191", "E111", "E114", "E117",
    "D206", "D300",
    "Q", "COM812", "COM819",
    "PLE0605", "FURB116",
    # Relaxed for custom component (not full HA strictness on these)
    "ASYNC109", "ASYNC110", "ASYNC240",
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant", "custom_components"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"custom_components/**" = ["PTH"]
"custom_components/netatmo/__init__.py" = ["PTH", "E402"]  # sys.modules registration before imports
"custom_components/netatmo/pyatmo/**" = ["PTH", "TID252", "D"]
"tests/**" = ["PTH", "SLF001", "B904", "N815", "RUF018", "D104", "PLC0414", "PLC0415", "PERF203"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"
